--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT=5000
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=12345
-DB_NAME=todo_app
+
+DATABASE_URL=mysql://avnadmin:PASSWORD@mysql-21a532dd-shotikoslabadzes1-bf6d.h.aivencloud.com:28214/defaultdb?ssl-mode=REQUIRED
+
+
 JWT_SECRET=8OMq0g1LaowCoYcHgLpxyqJcEWcqdjmW
