--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.21.0",
+    "mongoose": "^8.20.1",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11"
   }
