--- a/vercel.json
+++ b/vercel.json
@@ -7,18 +7,12 @@
       "config": { "distDir": "build" }
     },
     {
-      "src": "backend/**/*.js",
+      "src": "backend/src/server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "backend/$1.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "frontend/$1"
-    }
+    { "src": "/api/(.*)", "dest": "backend/src/server.js" },
+    { "src": "/(.*)", "dest": "frontend/build/$1" }
   ]
 }
